--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <link
+      href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -14,8 +21,28 @@
     />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
-  <ul>
+  <h1 align="center">Cole Carter</h1>
+  <ul class="nav nav-dark bg-dark justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact Info</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
+  <ul align="center">
     <li><strong>Email: Tcgcolecarter@gmail.com</strong></li>
-    <li><strong>Github: https://github.com/Coletrainxd</strong></li>
+    <li>
+      <strong
+        ><a
+          href="https://github.com/Coletrainxd?tab=repositories"
+          target="_blank"
+          >My GitHub</a
+        >
+      </strong>
+    </li>
   </ul>
 </html>
