--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,52 @@
-<head></head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <h1 align="center">Cole Carter</h1>
+    <ul class="nav nav-dark bg-dark justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contact Info</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+      </li>
+    </ul>
+  </head>
+  <br />
+  <br />
+  <h1 align="center">First Homework</h1>
+  <br />
+  <br />
+  <a href="https://github.com/Coletrainxd/Homework-1"></a
+  ><img
+    src=".\assets\Homework-1.png"
+    alt="First Homework"
+    style="width:900px;height:600px;"
+    class="center"
+  />
+  <br />
+  <br />
+  <h1 align="center">Homeworkception</h1>
+  <br />
+  <br />
+  <img
+    src=".\assets\Homeworkception.png"
+    alt="First Homework"
+    style="width:900px;height:700px;"
+    class="center"
+  />
+</html>
