--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
   <br />
   <a href="https://github.com/Coletrainxd/Homework-1"></a
   ><img
-    src=".\assets\Homework-1.png"
+    src=".homework-2\assets\Homework-1.png"
     alt="First Homework"
     style="width:900px;height:600px;"
     class="center"
